@@ -2,6 +2,7 @@ v1.0.4
 
                 Features:
                     - Added support for COMMENTS ON.
+                    - Fixed handling of $$ delimiters in SQL routine bodies.
 
 2025-12-22      v1.0.3
 
